--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "x-websocket",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "description": "WebComponent WebSocket wrapper.",
     "authors": [
         "Elie Rotenberg <elie@rotenberg.io>",
@@ -19,6 +19,6 @@
         "bower_components"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#1.0.0"
+        "polymer": "Polymer/polymer#^1.1.0"
     }
 }
